<resources>

    <string name="dashboard">DashBoard</string>
    <string name="grn_ver">GRN Verification</string>

    <string name="err_msg_name">name field is empty</string>
    <string name="err_msg_password">password field is empty</string>
    <string name="err_msg_required">Valid Input Required</string>

    <string name="err_name_credentials">name is incorrect </string>
    <string name="err_password_credentials">password is incorrect</string>
    <string name="auto_refresh">Refresh</string>
    <string name="scan">Scan</string>
    <string name="grn_verify">GRN Verification</string>
    <string name="put_away">Put Away</string>
    <string name="pickUp">Pick Up</string>
    <string name="put_away_detail">Put Away Details</string>
    <string name="loading_advice">Loading Advice</string>
    <string name="loading_advice_detail">Loading Advice Detail</string>
    <string name="grn_verify_details">GRN Verification Details</string>
    <string name="pickUpdetail">PickUp Details</string>
    <string name="receiving">Receiving</string>
    <string name="receiving_item_list">Receiving Item List</string>
    <string name="coil_issue">Coil Issue</string>
    <string name="coil_issue_item_list">Issuing Item List</string>
    <string name="coil_receiving">Coil Receiving</string>
    <string name="coil_receiving_item_list">Receiving Item List</string>
    <string name="rm_issuance">Issuance</string>
    <string name="rm_issuance_item_list">Issue Item List</string>
    <string name="return_not_used_item">Return Not Used Item List</string>
    <string name="receipt_item_detail">Receipt Item Detail</string>
    <string name="issue_item_detail">Issue Item Detail</string>
    <string name="issue_machine_detail">Issue Machine Detail</string>
    <string name="return_not_used_item_detail">Not Used Item Detail</string>
    <string name="cancelled">Cancelled</string>
    <string name="load_shop_floor">Loading For Forging</string>
    <string name="unload_shop_floor">Unloading For Forging</string>
    <string name="other_process_unloading">Other Process Unloading</string>
    <string name="warehouse_loading">Warehouse Loading</string>
    <string name="load_advice_mrs">Loading Advice MRS</string>
    <string name="load_advice_coil">Loading Advice COIL</string>

    <!--GRN verification details screen-->
    <string name="grn_no">GRN No.</string>
    <string name="grn_date">GRN Date</string>
    <string name="ir_no">IR No.</string>
    <string name="product_Code">Product Code</string>
    <string name="product_desc">Product Description</string>
    <string name="product_location">Location</string>
    <string name="pack_size">Standard Qty.</string>
    <string name="please_wait">Please Wait...</string>
    <string name="actual_pack_size">Actual Qty.</string>
    <string name="put_away_list_qr_edit_box_hint"><font size="12">Press Center Blue Button To Scan QR Code Automatically\n Or \n Enter QR Code Data Manually</font></string>
    <string name="grn_qty">GRN Qty (Box)</string>
    <string name="already_verified_qty">Verified Qty (Box)</string>
    <string name="verify_qtyBox">Verifying Qty (Box)</string>
    <string name="pending_qty">Pending Qty (Box)</string>
    <string name="item_code">Item Code</string>
    <string name="grn_date_view">GRN Date</string>
    <string name="colon">:</string>
    <string name="radio_bondroom">BOND</string>
    <string name="radio_dockarea">DOCK</string>

    <!--PutAway parameter-->
    <string name="put_away_product_code">Product Code</string>
    <string name="put_away_product_desc">Product Desc.</string>
    <string name="put_away_ir_no">IR No.</string>
    <string name="put_away_package_size">Package Size</string>
    <string name="put_away_suggested_area">Suggested Area</string>
    <string name="put_away_suggested_bin">Suggested Bin</string>
    <string name="put_away_suggested_qty">Suggested Qty.</string>
    <string name="put_away_qty">Put Away Qty.</string>
    <string name="alert_putAway">Do you want to do partial Put away verification ?</string>
    <string name="putAway_alert_yes">Yes</string>
    <string name="putAway_alert_no">No</string>


    <string name="alert_grn">Do you want to do partial GRN verification ?</string>
    <string name="alert_pickup">Bin or Dock location is different as per the suggested area, Do you want Server update ?</string>
    <string name="grn_alert_yes">Yes</string>
    <string name="grn_alert_no">No</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="something_went_wrong">Invalid Area!</string>
    <string name="success">Success</string>
    <string name="not_an_internet_connectivity">Not an internet connectivity</string>
    <string name="alert">Alert</string>
    <string name="data_not_available">Data Not Available</string>
    <string name="please_enter_put_away_qty">Please enter Put Away Quantity</string>
    <string name="please_scan_bin_location">Please scan bin location</string>
    <string name="choose_your_area"><u> Choose your area</u></string>
    <!--pickup parameter-->
    <string name="customer">Customer</string>
    <string name="pickNo">Pick No.</string>
    <string name="pickDate">Pick Date</string>
    <string name="itemCode">Item Code</string>
    <string name="packType">Pack Type</string>
    <string name="location_desc">Location</string>
    <string name="packSizePick">Pack Size</string>
    <string name="binLocation">Bin Location</string>
    <string name="binQty">Bin Qty.</string>
    <string name="boxes_at_location">Boxes at Location</string>
    <string name="PickedQty">Picking Qty.</string>
    <string name="pending_boxes_for_pick">Pending Boxes For Pick</string>
    <string name="pendingQty">Pending Qty.</string>
    <string name="pend_qty">Pending Qty</string>
    <string name="itemDesc">Item Desc.</string>
    <string name="reason">Reason</string>
    <string name="trollyNo">Trolly No.</string>
    <string name="pickingQty">Qty. to be Picked</string>
    <string name="boxes_to_be_pick">Boxes to be Picked</string>

    <string name="customerName">Customer Name</string>
    <string name="customerCode">Customer Code</string>
    <string name="productName">Product Name</string>
    <string name="productCode">Customer Code</string>
    <string name="noBoxes">No. of Boxes</string>
    <string name="pendNoBoxes">Pending No. of Boxes</string>
    <string name="picking_qty">Picking Qty</string>
    <string name="boxes">Boxes</string>
    <string name="v_no">V. No.</string>
    <string name="standqty">Standard Qty.</string>
    <string name="Submit">Submit</string>
    <string name="proceed">Proceed</string>
    <string name="populate">populate</string>
    <string name="transfer_to_think7">Transfer to Think 7</string>

    <string name="hardwareDetection">Press Center Blue Button to Scan Bin Location</string>
    <string name="hardwareDetection_pickup">Press Center Blue Button to Scan Bin or Trolley Location</string>
    <string name="hardwareDetection_pickupDetail">Press Center Blue Button to Scan loading Qty.</string>
    <string name="hardwareDetection_rm_receipt_item">Press Center Blue Button to Scan Location</string>
    <!--loading advice parameter-->
    <string name="invoiceNo">Invoice No.</string>
    <string name="invoiceDate">Invoice Date</string>
    <string name="invoiceQty">Invoice Qty.</string>
    <string name="loadedQty">Loaded Qty.</string>
    <string name="std">STD</string>
    <string name="nonstd">NONSTD</string>
    <string name="grade_no">Grade No: </string>
    <string name="mrir_no">MRIR No: </string>
    <string name="mrir_date">MRIR Date: </string>
    <string name="mrs_no">MRS No: </string>
    <string name="route_no">ROUTE No: </string>
    <string name="route_date">ROUTE Date: </string>
    <string name="heat_no">Heat No: </string>
    <string name="grade">Grade: </string>
    <string name="coil_no">Coil No: </string>
    <string name="coil_weight">Coil Weight: </string>
    <string name="location_name">Loc Name: </string>
    <string name="location_id">Loc Id: </string>
    <string name="machine_name">Machine Name: </string>
    <string name="machine_no">Machine No: </string>
    <string name="desp_no">Desp No: </string>
    <string name="desp_date">Desp Date: </string>
    <string name="item_code_lable">Item Code: </string>
    <string name="division">Division: </string>
    <string name="wire_dia">Wire Dia: </string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="grn_verification_cancelled">GRN Verification Cancelled</string>
    <string name="scan_item_qr_code">Scan Item QR Code</string>
    <string name="scan_mrs_qr_code">Scan MRS QR Code</string>
    <string name="scan_coil_qr_code">Scan Coil QR Code</string>

    <string name="set_1i">%1$d</string>
    <string name="set_1s">%1$s</string>
    <string name="set_1s_2s">%1$s %2$s</string>
    <string name="set_1s_2i">%1$s %2$d</string>
    <string name="set_1s_2s_3s">%1$s %2$s %3$s</string>
    <string name="set_1d_2s_3d">%1$d %2$s %3$d</string>
    <string name="set_1s_2s_3s_4s">%1$s %2$s %3$s %4$s</string>
    <string name="set_1s_2i_3s_4i">%1$s %2$d %3$s %4$d</string>
    <string name="set_1s_2i_3s_4i_5s_6i">%1$s %2$d %3$s %4$d %5$s %6$d</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="scan_kanban_qr_code">Scan Kanban QR Code</string>
    <string name="submit">SUBMIT</string>
    <string name="warehouse_invoice">Warehouse Invoice</string>
    <string name="wharehouse_invoice_qr_code">Warehouse invoice QR Code</string>
    <string name="total_boxes">Total Boxes</string>
    <string name="slash"> / </string>
    <string name="wh_invoice_qr_code">WH Invoice QR Code</string>
    <string name="please_scan_invoice_string">Please Scan Invoice String</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="plant_invoice_qr_code">Plant Invoice QR Code</string>
    <string name="product_label_qr_code">Product label QR Code</string>
    <string name="please_scan_all_required_qr_code">Please scan all required QR Code</string>
    <string name="final_submit">final submit</string>
    <string name="_0">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
