<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pickup_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.essindia.stlapp.Activity.PickupDetails">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/usernameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/productCodeEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="true"
                            android:focusable="false"
                            android:hint="@string/product_Code"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textSize="16sp"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/grnDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/packTypeEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="true"
                            android:focusable="false"
                            android:hint="@string/packType"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:text=""
                            android:textSize="16sp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/packSizeEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="true"
                            android:focusable="false"
                            android:hint="@string/packSizePick"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textSize="16sp"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/et_location_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="true"
                            android:focusable="false"
                            android:hint="@string/location_desc"
                            android:imeOptions="actionNext"
                            android:text=""
                            android:textSize="16sp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:clickable="false">

                    <EditText
                        android:id="@+id/binQtyEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:hint="@string/boxes_at_location"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false">

                    <EditText
                        android:id="@+id/pickedQtyEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/pending_boxes_for_pick"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false">

                        <EditText
                            android:id="@+id/pickingQtyEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="true"
                            android:hint="@string/boxes_to_be_pick"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:textSize="16sp"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/reasonLL"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Spinner
                        android:id="@+id/reasonSp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/reason"
                        android:inputType="number"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/remarksET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="7dp">

                <EditText
                    android:id="@+id/itemDescTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:focusable="false"
                    android:hint="@string/itemDesc"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="Nuts And Bolts"
                    android:textSize="16sp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonPickUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/Submit"
                android:textColor="@color/white"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>


