<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        card_view:contentPadding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <RelativeLayout
                android:id="@+id/rl_item_detail_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/cb_scan"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_grade_no_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="@string/grade_no"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_grade_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_grade_no_label"
                    android:paddingTop="3dp"
                    android:text="dfr434"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_mrir_no_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_grade_no_label"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="@string/mrir_no"/>

                <TextView
                    android:id="@+id/tv_mrir_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_grade_no_label"
                    android:layout_toRightOf="@+id/tv_mrir_no_label"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="434"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_item_detail_cont"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_coil_no_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="3dp"
                    android:text="@string/coil_no"/>

                <TextView
                    android:id="@+id/tv_coil_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/tv_coil_weight_label"
                    android:layout_toRightOf="@+id/tv_coil_no_label"
                    android:paddingBottom="3dp"
                    android:text="@string/coil_no"/>

                <TextView
                    android:id="@+id/tv_coil_weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/tv_coil_weight"
                    android:paddingBottom="3dp"
                    android:paddingRight="3dp"
                    android:text="@string/coil_weight"/>

                <TextView
                    android:id="@+id/tv_coil_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="3dp"
                    android:paddingRight="3dp"
                    android:text="34 kg"/>
            </RelativeLayout>

            <CheckBox
                android:id="@+id/cb_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="false"
                android:clickable="false"
                android:paddingRight="3dp"
                android:text="Verify" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>